starting to fix the spacing of the navbar

--- a/styles/global.css
+++ b/styles/global.css
@@ -103,5 +103,4 @@ ul.nav {
   text-decoration-color: #FF3A02;
   text-underline-offset: 28px;
   text-decoration-thickness: 4px;
-  text-underline-width: 120%;
 }
